--- a/hakyll-ikiwiki.cabal
+++ b/hakyll-ikiwiki.cabal
@@ -7,5 +7,9 @@ executable site
   main-is:          site.hs
   build-depends:    base == 4.*
                   , hakyll == 4.12.*
+                  , parsec
+                  , pandoc
+                  , unordered-containers == 0.2.9.*
   ghc-options:      -threaded
   default-language: Haskell2010
+  other-modules:    IkiWiki
