--- a/hakyll-ikiwiki.cabal
+++ b/hakyll-ikiwiki.cabal
@@ -10,6 +10,7 @@ executable site
                   , parsec
                   , pandoc
                   , unordered-containers == 0.2.9.*
+                  , filepath
   ghc-options:      -threaded
   default-language: Haskell2010
   other-modules:    IkiWiki
